welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
    }else if (speed>80){
          ^caughtSpeeding:16: error: type mismatch;
 found   : Unit
 required: Int
    }else if (speed>85){
          ^